--- a/ethereumj-core/pom.xml
+++ b/ethereumj-core/pom.xml
@@ -1,5 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ethereum</groupId>
 	<artifactId>ethereumj</artifactId>
@@ -8,16 +9,16 @@
 	<name>EthereumJ</name>
 	<url>http://www.ethereumj.org</url>
 
-<!--
- * Install jar with sources to the local maven repository
- mvn install -Dmaven.test.skip=true
+    <!--
+     * Install jar with sources to the local maven repository
+     mvn install -Dmaven.test.skip=true
 
- * To generate source for ANTLR parser/lexer
- mvn antlr4:antlr4
+     * To generate source for ANTLR parser/lexer
+     mvn antlr4:antlr4
 
--->
+    -->
 
-	<developers>
+    <developers>
 		<developer>
 			<name>Roman Mandeleil</name>
 		</developer>
@@ -35,8 +36,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- Third-party dependencies -->
-		<junit.version>4.11</junit.version>
+        <!-- Third-party dependencies -->
+        <junit.version>4.11</junit.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<leveldb.version>0.7</leveldb.version>
 		<spongycastle.version>1.51.0.0</spongycastle.version>
@@ -57,8 +58,8 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- Spongy Castle for SHA3 and SECP256K1 -->
-		<dependency>
+        <!-- Spongy Castle for SHA3 and SECP256K1 -->
+        <dependency>
 			<groupId>com.madgag.spongycastle</groupId>
 			<artifactId>core</artifactId>
 			<version>${spongycastle.version}</version>
@@ -68,13 +69,13 @@
 		    <artifactId>leveldb</artifactId>
 		    <version>${leveldb.version}</version>
 		</dependency>
-		<!-- Added Cedarsoft for DeepEquals function  -->
-		<dependency>
+        <!-- Added Cedarsoft for DeepEquals function  -->
+        <dependency>
 		  <groupId>com.cedarsoftware</groupId>
 		  <artifactId>java-util</artifactId>
 		  <version>1.8.0</version>
 		</dependency>
-		<!-- For Serpent compile -->
+        <!-- For Serpent compile -->
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
@@ -199,12 +200,52 @@
             <artifactId>spring-orm</artifactId>
             <version>4.1.2.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.1.2.RELEASE</version>
+        </dependency>
+        	    <dependency>
+	      <groupId>org.springframework</groupId>
+	      <artifactId>spring-webmvc</artifactId>
+	      <version>4.1.2.RELEASE</version>
+	    </dependency>
+        <dependency>
+            <groupId>com.github.briandilley.jsonrpc4j</groupId>
+            <artifactId>jsonrpc4j</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>8.1.9.v20130131</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>8.1.9.v20130131</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-annotations</artifactId>
+            <version>8.1.9.v20130131</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.eclipse.jetty.orbit</groupId>
+                    <artifactId>javax.annotation</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty.orbit</groupId>
+                    <artifactId>javax.transaction</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency> <!-- !*! BEST PERFORMANCE EVER DO NOT UPGRADE !*! -->
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>1.8.0.10</version>
-        </dependency> <!-- !*! BEST PERFORMANCE EVER DO NOT UPGRADE !*! -->
+        </dependency>
+        <!-- !*! BEST PERFORMANCE EVER DO NOT UPGRADE !*! -->
 
 
         <dependency>
@@ -347,27 +388,27 @@
 			    </configuration>
 			</plugin>
 
-<!--
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.3</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <configuration>
-                            <tasks>
-                                <property name="maven.project.artifactId" value="${project.artifactId}"/>
-                                <property name="maven.project.version" value="${project.version}"/>
-                                <ant antfile="build-post-package.xml" target="run"/>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
--->
+            <!--
+                        <plugin>
+                            <artifactId>maven-antrun-plugin</artifactId>
+                            <version>1.3</version>
+                            <executions>
+                                <execution>
+                                    <phase>package</phase>
+                                    <configuration>
+                                        <tasks>
+                                            <property name="maven.project.artifactId" value="${project.artifactId}"/>
+                                            <property name="maven.project.version" value="${project.version}"/>
+                                            <ant antfile="build-post-package.xml" target="run"/>
+                                        </tasks>
+                                    </configuration>
+                                    <goals>
+                                        <goal>run</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
+            -->
 
 
             <plugin>
