json rpc properties

--- a/ethereumj-core/src/main/resources/system.properties
+++ b/ethereumj-core/src/main/resources/system.properties
@@ -151,3 +151,7 @@ root.hash.start = -1
 # The protocols supported by peer
 peer.capabilities = eth, shh
 
+# Settings regarding JSON-RPC server
+jsonrpc.enabled = true
+jsonrpc.listen.port = 8080
+jsonrpc.listen.ip = 0.0.0.0
