--- a/ethereumj-core/src/main/resources/system.properties
+++ b/ethereumj-core/src/main/resources/system.properties
@@ -8,6 +8,7 @@ peer.discovery.ip.list = poc-7.ethdev.com:30303,\
 
 # Peer Server Zero (poc-7.ethdev.com)
 peer.active.ip   = poc-7.ethdev.com
+#peer.active.port = 30303
 peer.active.port = 30300
 
 # Peer for server to listen for incoming
